removed scrollListener, changed gap and fixed padding

--- a/style.css
+++ b/style.css
@@ -471,9 +471,9 @@
 }
 
 .flex {
-  display: flex;
+  display: flex !important;
 }
 
 .no-transform {
-  transform: none;
+  transform: none !important;
 }
