--- a/styles/basket.css
+++ b/styles/basket.css
@@ -36,7 +36,7 @@
 .basket_overlay {
   flex: 0 0 300px;
   position: sticky;
-  top: 20px;
+  top: 300px;
   align-self: flex-start;
   background-color: #363534;
   border-radius: 20px 0 0 20px;
